[Chore] 빌드 템플릿 업데이트 및 단위 테스트 보강