@@ -8,6 +8,7 @@ import org.junit.jupiter.api.Test;
 import java.io.File;
 import java.io.FileWriter;
 import java.io.IOException;
+import java.util.Collections;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -39,7 +40,7 @@ class JUnitXmlResultParserTest {
         }
 
         // When
-        ScoringResult result = parser.parse("sub-123", java.util.List.of(tempXml), 1);
+        ScoringResult result = parser.parse("sub-123", java.util.List.of(tempXml), 1, Collections.emptyList());
 
         // Then
         assertThat(result.getSubmissionId()).isEqualTo("sub-123");
@@ -71,7 +72,7 @@ class JUnitXmlResultParserTest {
         }
 
         // When
-        ScoringResult result = parser.parse("sub-456", java.util.List.of(tempXml), 0);
+        ScoringResult result = parser.parse("sub-456", java.util.List.of(tempXml), 0, Collections.emptyList());
 
         // Then
         assertThat(result.getSubmissionId()).isEqualTo("sub-456");
